--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>DoctorCare</title>
   </head>
   <body onscroll="onScroll()">
-    <nav class="scroll">
+    <nav id="navigation" class="scroll">
       <div class="wrapper">
         <a class="logo" href="#">
           <svg
@@ -66,6 +66,36 @@
           </svg>
         </a>
 
+        <div class="menu">
+          <ul>
+            <li>
+              <a href="#">Início</a>
+            </li>
+
+            <li><a href="#">Sobre</a></li>
+
+            <li>
+              <a href="#">Serviços</a>
+            </li>
+          </ul>
+
+          <button>Agende sua consulta</button>
+
+          <ul class="social-links">
+            <li>
+              <a href="#">Instagram</a>
+            </li>
+
+            <li>
+              <a href="#">Facebook</a>
+            </li>
+
+            <li>
+              <a href="#">Youtube</a>
+            </li>
+          </ul>
+        </div>
+
         <svg
           width="40"
           height="40"
@@ -99,7 +129,6 @@
     </nav>
 
     <header class="wrapper">
-      
       <h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
       <h1>Assistência médica simplificada para todos</h1>
       <p>
